k8s/frontend/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-loadbalancer
  namespace: frontend
  labels:
    app: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 80
    protocol: TCP
    name: https
  selector:
    app: frontend
